Fixed wrong height from before

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -196,7 +196,7 @@ content: attr(data-active) !important;
 
 #botlogo {
 	position: relative;
-	height: 248.45vw;
+	height: 22.61vw;
 	width: 75vw;
 	padding-right: 12.5vw;
 	padding-left: 12.5vw;
@@ -239,7 +239,7 @@ content: attr(data-active) !important;
 }
 #logo {
 	z-index:1002;
-	height: 248.45vw;
+	height: 22.61vwvw;
 }
 /* Bottom content */
 /* --------- */
